Moved Google CSE to span width under header, set div to absolute to fix scrolling, added new "whats k8s" topic, and CSS fixes for headers
Added redirect to cover the .../docs url
Added local copy of "what is k8s"

Add CSS to no code wrapping

--- a/_sass/_documents.scss
+++ b/_sass/_documents.scss
@@ -1,12 +1,17 @@
 .bodywrapper {
-    overflow: auto;
+    height: 85vh;
 }
 div #doccontent {
+	position: absolute;
+	top:134px;
+	left:250px;
+	right:0px;
+	bottom:0px;
     padding-left: 30px;
     margin-right: 30px;
-    height: 94vh;
     max-width: 900px;
     padding-right: 10px;
+    overflow: auto;
 
     h1 {
         font-size: 45px;
@@ -95,6 +100,10 @@ div #doccontent {
         padding-bottom: 10px;
         padding-top: 10px;
     }
+	
+	p > code {
+	  white-space: nowrap;
+	}
 
     img {
         max-width: 100%;
